--- a/src/main/webapps/index.html
+++ b/src/main/webapps/index.html
@@ -48,9 +48,9 @@
 
         <div class="field-wrap">
           <label>
-            Email Address<span class="req">*</span>
+            Nickname<span class="req">*</span>
           </label>
-          <input type="email" required autocomplete="off" />
+          <input type="text" required autocomplete="off" />
         </div>
 
         <div class="field-wrap">
@@ -73,9 +73,9 @@
 
         <div class="field-wrap">
           <label>
-            Email Address<span class="req">*</span>
+            Nickname<span class="req">*</span>
           </label>
-          <input type="email" required autocomplete="off" />
+          <input type="text" required autocomplete="off" />
         </div>
 
         <div class="field-wrap">
